*) now using (in-source) folders4cmake to update CMake source-file lists from within Visual Studio *) added "dev" folder for developer-only tools and helper scripts *) added IDs to csp::NativePackage so that it can be used to create objects without having to do expensive string operations & lookups *) reorganized python scripts and moved commonly used code to separate python modules *) added csp::ScriptDefinition to be able to create objects & call methods more quickly *) removed the "flash" sample due to deprecation *) added CMake rules to automatically build .as files for the samples & the caspin core *) extensively refactored the csp::VmCore and removed duplicated code (preparing for the removal of csp::ArgumentList and the use of C++ argument lists) *) added timestamp checking to cspcompile.py and cspgenerate.py *) some further preparations for the upcoming stable branch

--- a/samples/minimal/scripts/CMakeLists.txt
+++ b/samples/minimal/scripts/CMakeLists.txt
@@ -39,7 +39,7 @@ set (include_dirs
 )
 
 # read the source files list
-include (source_files)
+include (minimal_src_files)
 
 #-----------------------------------------------------------------------
 # BUILD SETTINGS & COMPILATION
@@ -68,6 +68,20 @@ endif()
 
 # add the sample
 add_executable (minimal ${file_root})
+
+# automatically update the source files list
+auto_rebuild_src_files (minimal)
+
+# the path that contains the AS3 files for this sample
+set (as3_dir ${CMAKE_SOURCE_DIR}/samples/minimal/as3)
+
+# automatically compile the sample AS3 files to ABC if necessary
+add_custom_command (
+	OUTPUT ${as3_dir}/minimal.abc
+	MAIN_DEPENDENCY ${as3_dir}/minimal.as
+	WORKING_DIRECTORY ${as3_dir}
+	COMMAND ${as3_dir}/build.py
+)
 
 # enable the tamarin debugger
 if(sample_MINIMAL_use_runtime_debugger)
