*) added unit test for the C++/AS3 interface *) removed csp::ScriptDefinition *) removed csp::ArgumentList (due to bad performance) *) added custom Toplevel class *) added some macros for internal use *) refactored csp::VmCore implementations (removed most duplicate code)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required (VERSION 2.6)
 project (caspin)
 
+#-----------------------------------------------------------------------
+# CMAKE OPTIONS
+#-----------------------------------------------------------------------
+option(dev_BUILD_TESTS "Generate build files for the development test tools" OFF)
+
 # set up the module path
 set (CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 
@@ -17,3 +22,11 @@ find_package (tamarin REQUIRED)
 add_subdirectory (scripts)
 add_subdirectory (samples/minimal/scripts)
 add_subdirectory (samples/native_classes/scripts)
+
+# generate test build files only if requested
+if(dev_BUILD_TESTS)
+#{
+	message ("Generating Developer Tests...")
+	add_subdirectory (dev/tests/cpp_interface/scripts)
+#}
+endif(dev_BUILD_TESTS)
