*) fixed broken execution of python scripts from within python & cmake scripts on unix *) fixed handling of "null" results at cpp_interface test *) fixed wrong "const"ness of csp::VmCore::toScript(bool) that would cause ambiguity *) further enhanced the cmake files for the cpp_interface test *) extended some caspin macros to allow for future integration of the Tamarin patch that I submitted (https://bugzilla.mozilla.org/show_bug.cgi?id=604569) *) reversed some pieces of code back to previous versions to make them work with tamarin-central *) added two new helper macros for easier definition of default ScriptObject constructors and destructors *) fixed copy 'n' paste typo at the "native_classes" sample's cmake script *) cleaned up the "native_classes" sample's main C++ file *) updated the tamarin patch with the tamarin-central changes *) updated tamarin_setup.py to use tamarin-central instead of tamarin-redux *) added a fix for tamarin_setup.py failing if it couldn't download ASC.jar via FTP *) further enhanced and fixed cspcompile.py *) added some temporary fixes to cspgenerate.py until the above mentioned patch gets included into Tamarin

--- a/samples/minimal/scripts/CMakeLists.txt
+++ b/samples/minimal/scripts/CMakeLists.txt
@@ -1,4 +1,7 @@
+set (CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
+
+include (caspin_globals)
 
 #-----------------------------------------------------------------------
 # CMAKE OPTIONS
@@ -11,7 +14,7 @@ option(sample_MINIMAL_use_runtime_debugger "Use runtime debugger for the minimal
 
 # unix g++ flags
 if(UNIX)
-	set (CMAKE_CXX_FLAGS "-O -Wcast-align -Wdisabled-optimization -Wextra -Wformat=2 -Winit-self -Winvalid-pch -Wno-invalid-offsetof -Wno-switch -Wparentheses -Wpointer-arith -Wreorder -Wsign-compare -Wwrite-strings -Wno-ctor-dtor-privacy -Woverloaded-virtual -Wsign-promo -Wno-char-subscripts -fmessage-length=0 -fno-exceptions -fno-rtti -fno-check-new -fstrict-aliasing -fsigned-char -Wstrict-null-sentinel -Werror -Wempty-body -Wno-logical-op -Wmissing-field-initializers -Wstrict-aliasing=3 -Wno-array-bounds -Wno-clobbered -Wstrict-overflow=0 -funit-at-a-time -Wuninitialized")
+	set (CMAKE_CXX_FLAGS ${CASPIN_CXX_FLAGS})
 endif()
 
 # generic compiler switches
@@ -80,7 +83,7 @@ add_custom_command (
 	OUTPUT ${as3_dir}/minimal.abc
 	MAIN_DEPENDENCY ${as3_dir}/minimal.as
 	WORKING_DIRECTORY ${as3_dir}
-	COMMAND ${as3_dir}/build.py
+	COMMAND python ${as3_dir}/build.py
 )
 
 # enable the tamarin debugger
