*) removed Tamarin TRY/CATCHes from all methods at csp::VmCore that are used to call AS3 functions (so you can catch Exceptions that are emitted from AS3 in your own code) *) changed CMake scripts to statically link against the MSVCRT on windows (this is sort of a requirement for using Tamarin) *) added some beautiful coloring to the cspcompile/cspgenerate scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,16 @@ project (caspin)
 #-----------------------------------------------------------------------
 # CMAKE OPTIONS
 #-----------------------------------------------------------------------
-option(dev_BUILD_TESTS "Generate build files for the development test tools" OFF)
+option(BUILD_UNIT_TESTS "Generate build files for the development test tools" OFF)
+option(BUILD_ONLY_DEBUG_RELEASE "Generate only Debug and Release configurations (exclude RelWithDebInfo and MinSizeRel)" ON)
 
 # set up the module path
 set (CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 
 # remove the MinSizeRel and RelWithDebInfo configurations
-set (CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "limited configs" FORCE)
+if(BUILD_ONLY_DEBUG_RELEASE)
+	set (CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "limited configs" FORCE)
+endif(BUILD_ONLY_DEBUG_RELEASE)
 
 # load the folders4cmake utils
 set (folders4cmake_path ${CMAKE_SOURCE_DIR}/cmake/folders4cmake.jar)
@@ -24,8 +27,8 @@ add_subdirectory (samples/minimal/scripts)
 add_subdirectory (samples/native_classes/scripts)
 
 # generate test build files only if requested
-if(dev_BUILD_TESTS)
+if(BUILD_UNIT_TESTS)
 #{
 	add_subdirectory (dev/tests/cpp_interface/scripts)
 #}
-endif(dev_BUILD_TESTS)
+endif(BUILD_UNIT_TESTS)
