--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -1,7 +1,7 @@
 set (CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
 
-include (caspin_globals)
+include (build_tools)
 
 #-----------------------------------------------------------------------
 # PREPROCESSOR SETTINGS
@@ -47,6 +47,11 @@ endif()
 #-----------------------------------------------------------------------
 # BUILD SETTINGS & COMPILATION
 #-----------------------------------------------------------------------
+
+if(WIN32)
+	# link statically against the MSVCRT
+	link_static_crt()
+endif(WIN32)
 
 # build output directory
 set (LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
